Move achievement popup to lower left to avoid covering up Continue button on small screens

--- a/app/styles/achievements.sass
+++ b/app/styles/achievements.sass
@@ -212,7 +212,7 @@ $user-achievements-scale: 0.8
 // Achievement Popup
 .achievement-popup-container
   position: fixed
-  right: 0px
+  left: 100px
   bottom: 0px
   z-index: 9001
   cursor: pointer
